# Stereo-Pose-Optimization

./: CMakeLists.txt  README.md  local.cpp  main.cpp  plot_marker_pose.py  projection_factor.h  utility.h
data/: cam1_data.txt  cam2_data.txt
output/: cam_pose_opt.txt  log.txt  marker_pose_opt.txt
